refactor: 입력된 게스트 순서대로 결과 출력이 되도록 수정